dropshot/tests/fail/bad_endpoint5.stderr
error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
   --> $DIR/bad_endpoint5.rs:26:14
    |
26  |     _params: Query<QueryParams>,
    |              ^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
    |
    = note: required because of the requirements on the impl of `serde::de::DeserializeOwned` for `QueryParams`
note: required by a bound in `dropshot::Query`
   --> $DIR/handler.rs:547:29
    |
547 | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
    |                             ^^^^^^^^^^^^^^^^ required by this bound in `dropshot::Query`
